xiaobuapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xiaobu-api
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: xiaobu-api
