xiaobuapi/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: xiaobu-api
spec:
  rules:
  - host: api.xiaobu.vip
    http:
      paths:
      - backend:
          serviceName: xiaobu-api
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - api.xiaobu.vip
    secretName: xiaobuapi
